--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server/index.js",
-    "build": "vite client"
+    "start": "vite client"
   },
   "keywords": [],
   "author": "",
