--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "vite client"
+    "dev": "concurrently npm:wacth:*",
+    "wacth:client": "vite client",
+    "wacth:server": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +19,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "vite": "^4.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
